--- a/socialblog/templates/index.html
+++ b/socialblog/templates/index.html
@@ -40,19 +40,16 @@
       <h4>DATOS EN TIMEPO REAL</h4>
       <div class="card">
         <div class="card-body">
-          <iframe id="pym-fivethirtyeight_embed_324" title="Where Do The Latest COVID-19 Models Think The U.S. Is Headed?" src="https://projects.fivethirtyeight.com/covid-forecasts/promo.html" width="300" height="300" scrolling="no"></iframe>
+          <textarea id="chart1_data" style="display: none;">{{chart1_data}}</textarea>
+          <canvas id="chart1"></canvas>
         </div>
       </div>
       <div class="card">
         <div class="card-body">
-          <iframe id="pym-fivethirtyeight_embed_148" title="How Popular Is Donald Trump?" src="https://projects.fivethirtyeight.com/trump-approval-ratings/promo.html" width="300" height="200" scrolling="no"></iframe>
+          <canvas id="chart1_pie"></canvas>
         </div>
       </div>
-      <div class="card">
-        <div class="card-body">
-          <iframe id="pym-fivethirtyeight_embed_323" title="How many Americans are “very” worried about COVID-19’s effect on the economy?" src="https://projects.fivethirtyeight.com/coronavirus-polls/promo.html" width="300" height="275" scrolling="no"></iframe>
-        </div>
-      </div>
+      
     </div>
   </div>
 
