--- a/socialblog/templates/base.html
+++ b/socialblog/templates/base.html
@@ -20,7 +20,6 @@
 
   <link href="../static/css/creative.css" rel="stylesheet">
   <link href="../static/css/custom.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top">
@@ -109,7 +108,12 @@
   <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="../static/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
+  <script src="../static/js/moment.min.js"></script>
+  <script src="../static/js/Chart.min.js"></script>
+  <script src="../static/js/utils.js"></script>
+
   <script src="../static/js/creative.js"></script>
+  <script src="../static/js/custom.js"></script>
 
 </body>
 
