--- a/socialblog/templates/admin/index.html
+++ b/socialblog/templates/admin/index.html
@@ -2,5 +2,5 @@
 
 {% block body %}
 <h1>Hello, admin </h1>
-<a class="btn btn-primary btn-xl js-scroll-trigger" href="{{ url_for('core.index') }}"> Back to Home </a>
+<a class="btn btn-primary btn-xl js-scroll-trigger" href="{{ url_for('core.index') }}"> 1Back to Home </a>
 {% endblock %}
