--- a/socialblog/static/css/custom.css
+++ b/socialblog/static/css/custom.css
@@ -7,459 +7,125 @@
 
 */
 
-.section-welcome{
-	background: linear-gradient(45deg, #7f1cd4, #00fcff);
-	display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    align-items: center;
-    -webkit-align-items: center;
-    min-height: 100vh;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+.gradient-amin {
+	background: #8e2de2; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #4a00e0, #8e2de2); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #4a00e0, #8e2de2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-.justify-content-center{
-	justify-content: center!important;
-}
-
-.mbr-white{
-	color: #ffffff;
-}
-
-.display-1 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 4.25rem;
-  font-display: swap;
-}
-
-.display-4 {
-    font-family: 'Rubik', sans-serif;
-    font-size: 1rem !important;
-    font-display: swap;
-}
-
-.display-2 {
-    font-family: 'Rubik', sans-serif;
-    font-size: 2.2rem;
-    font-display: swap;
-}
-
-.display-5 {
-    font-family: 'Rubik', sans-serif;
-    font-size: 1.5rem;
-    font-display: swap;
-}
-
-.display-7 {
-    font-family: 'Rubik', sans-serif;
-    font-size: 1rem;
-    font-display: swap;
-}
-
-.white{
-	color: #ffffff;
-}
-.mbr-section-title{
-    font-style: normal;
-    line-height: 1.2;
-    text-align: center;    
-}
-
-.section-welcome .mbr-text{
-	font-family: 'Rubik', sans-serif;
-    font-size: 1.5rem;
-    text-align: center;
-    font-style: normal;
-    line-height: 1.6;
-    padding-bottom: 1rem!important;
-    color: #ffffff;
-}
-
-.section-welcome .mbr-section-btn{
-	text-align: center;
-	color: #ffffff;
-}
-
-.mbr-section-btn a.btn:not(.btn-form):hover, .mbr-section-btn a.btn:not(.btn-form):focus {
-    box-shadow: none !important;
-}
-
-.btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-}
-
-.btn-secondary:hover, .btn-secondary:focus, .btn-secondary.focus, .btn-secondary.active {
-    color: #ffffff !important;
-    background-color: #732db0 !important;
-    border-color: #732db0 !important;
-}
-
-.btn-secondary, .btn-secondary:active {
-    background-color: #9955d4 !important;
-    border-color: #9955d4 !important;
-    color: #ffffff !important;
-}
-
-.working-area {	    
-    width: 100%;
-    overflow: hidden;
-}
-
-.mbr-section-subtitle {
-    color: #767676;
-    font-weight: 300;
-    text-align: center;
-}
-
-.business-intelligence{
-	background-color: #ffffff;
-}
-
-#mainMenu .mbr-iconfont{
-	font-size: 1.5rem;
-    color: #ffffff;
-}
-
-.menu-phone-number .btn{
-	height: 36px !important;	
-}
-.menu-phone-number span{
-	vertical-align: middle;
-}
-
-.mbr-iconfont{
-	font-size: 80px;
-    color: #149dcc;
-}
-
-.card {
-
-}
-
-.working-area {
-}
-
-.working-area img {
-	height: 100%;
-	width: 100%;
-    position: absolute;
-}
-
-.working-area .card-box {
-    z-index: 99;
-    position: relative;
-    top: 0;
-    padding: 3rem !important;
-    text-align: center;
-    background-color: rgba(20, 157, 204, 0.6);
-}
-
-.working-area .card-box h4 {
-	letter-spacing: 0.1px;
-    line-height: 1;
-}
-
-.working-area .card-box p {
-    line-height: 1.6;
-    letter-spacing: 1px;
-}
-
-
-.business-intelligence .media-container-row {
-	display: flex;
-}
-
-html {
-    font-size: 16px;
-    /*font-size: 100% !important;*/
-}
-
-.menu-phone-number{
-	float: left;
-}
-
-.row h3.counter {
-    padding-top: 2rem;
-    padding-bottom: 1rem;
-    font-weight: 300;
-    font-family: 'Rubik', sans-serif;
-}
-
-.row h3.counter span {
-	font-size: 2.2rem;
-}
-
-.counter + h4 {
-	font-size: 1rem;
-	font-style: normal;
-	font-weight: 700;
-}
-
-.servicios{
-	background-color: #ebe6f1;
-	padding-top: 0px;
-}
-
-.servicios img{
-	width: 100%;	
-}
-
-.servicios .mbr-section-title{
-	text-align: left;
-	margin-bottom: 0.5rem;
-}
-
-.servicios .mbr-section-subtitle{
-	text-align: left;
-	color: #767676;
-    font-weight: 300;
-    margin-bottom: 0.5rem;
-}
 
-.mbr-content-title{
-	line-height: 1;
-	margin-bottom: 0px;
+@media (min-width: 1024px) {
+	.img-logo {
+		padding: 5px 0;
+	}
 }
-
-.mbr-bold{
-	font-weight: 700;
-}
-
-.mbr-content-text{
-	line-height: 1.5rem;
-	margin-bottom: 0px;
-}
-
-.inteligencia-electoral
-{
-	background-color: #ffffff;	
-}
-.inteligencia-electoral .mbr-section-title{
-	text-align: left;
-	margin-bottom: 0.5rem;
-	text-align: center;
-}
-
-.inteligencia-electoral .mbr-section-subtitle{
-	color: #073b4c;
-    font-weight: 300;
-    text-align: center;
-}
-
-.inteligencia-electoral .mbr-iconfont{
-	color: rgb(127, 28, 212);
-    fill: rgb(127, 28, 212);
-}
-.inteligencia-electoral h3{
-	color: #149dcc;
-}
-
-.servicios-electorales{
-	background-color: #f6fcfd;
-	padding-top: 0px;
-}
-
-.servicios-electorales img{
-	width: 100%;	
-}
-
-.servicios-electorales .mbr-section-title{
-	text-align: left;
-	margin-bottom: 0.5rem;
-}
-
-.servicios-electorales .mbr-section-subtitle{
-	text-align: left;
-	color: #767676;
-    font-weight: 300;
-    margin-bottom: 0.5rem;
-}
-
-.win-election{
-	background-color: #ffffff;
-}
-
-.win-election .timeline-element {
-    margin-bottom: 50px;
-    position: relative;
-    word-wrap: break-word;
-    word-break: break-word;
-    display: -webkit-flex;
-    flex-direction: row;
-    -webkit-flex-direction: row;
-}
-
-.win-election .reverse {
-    flex-direction: row-reverse;
-    -webkit-flex-direction: row-reverse;
-}
-
-
-.win-election .separline:before {
-    top: 20px;
-    bottom: 0;
-    position: absolute;
-    content: "";
-    width: 2px;
-    background-color: #efefef;
-    left: calc(50% - 1px);
-    height: calc(100% + 4rem);
-}
-
-.win-election .iconsBackground {
-    position: absolute;
-    left: 50%;
-    width: 60px;
-    height: 60px;
-    line-height: 30px;
-    text-align: center;
-    border-radius: 50%;
-    display: inline-block;
-    background-color: #efefef;
-    top: 20px;
-    margin-left: -30px;
-}
-
-.win-election .mbr-iconfont {
-    position: absolute;
-    text-align: center;
-    font-size: 35px;
-    display: inline-block;
-    z-index: 3;
-    top: 13px;
-    left: 13px;
-    color: #232323;
-}
-
-.win-election .election-card{
-	text-align: left;
-}
-
-.win-election .reverse .timeline-text-content {
-    margin-left: 2rem;
-    margin-right: 0;
-}
-
-.win-election .timeline-text-content {
-    padding: 2rem 2.5rem;
-    background: #efefef;
-    margin-right: 2rem;
-    transition: all .4s;
-}
-
-.win-election .timeline-text-content p {
-    margin-bottom: 0;
-    color: #000000;
-}
-
-.win-election h4{
-	margin-bottom: 0px;
-}
-
-.meet-geointelligence{
-	background-color: #efefef;
-}
-
-.post-item-wrap .post-image .mbr-section-btn {
-    position: absolute;
-    transition: opacity .3s;
-    width: 100%;
-    left: 0;
-    top: 50%;
-    height: auto;
-    transform: translateY(-50%);
-    opacity: 0;
-}
-
-.post-item-wrap .post-image .mbr-overlay {
-    background-color: #ffffff;    
-    transition: opacity .3s;
-    display: block !important;
-    opacity: 0;        
-    bottom: 0;
-    left: 0;    
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-    pointer-events: none;
-}
-
-
-.post-item-wrap .post-image:hover .mbr-overlay {
-    opacity: .5;
-}
-
-.post-item-wrap .post-image:hover .mbr-section-btn {
-	opacity: 1;
-}
-
-.to-contact{
-	background-color: #ffffff;
-	padding: 30px 0 !important;
-}
-.to-contact .mbr-section-title{
-	text-align: left;
-}
-
-.justify-content-center {
-    -webkit-justify-content: center;
-}
-
-.to-contact  a{
-	background-color: #149dcc !important;
-    border-color: #149dcc !important;
-    color: #ffffff !important;
-    padding: 20px !important;
-    margin-top: 20px !important;
-} 
-
-.contact{
-	background-color: #ffffff;
-	padding: 30px 0 !important;
-}
-
-.contact .google-map {
-    height: 25rem;
-    position: relative;
-}
-.contact .google-map iframe {
-    height: 100%;
-    width: 100%;
-}
-
-.contact .info-label{
-	padding-top: 2rem;
-}
-
-.contact .info-content{
-	padding-top: 2rem;
-}
-
-.contact-form{
-	background-color: #ffffff;
-	padding: 30px 0 !important;
-}
-
-.contact-form textarea{
-	height: 170px;
-}
-
-.contact-form .btn{
-	padding: 1rem 3rem !important;
-    border-radius: 3px !important;
-    margin: 0 auto;
-}
-
-.logo-default img{
+.img-logo {
 	height: 60px;
 }
 
-#logo span{
-	float: left;
-	font-family: 'Rubik', sans-serif !important;
-	font-size: 3rem !important;
-	font-weight: 500 !important;
-	font-display: swap;
+.logo-default,
+.logo-dark {
+	background: -webkit-linear-gradient(#8e2de2, #56ccf2);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+#header .header-inner #logo a,
+#header .header-inner #logo a span,
+#header #header-wrap #logo a,
+#header #header-wrap #logo a span {
+	font-size: 30px;
+}
+
+.img-cover {
+	position: relative;
+	height: 0;
+	padding-top: 50%;
+	margin-bottom: 14px;
+	border-radius: 12px;
+	overflow: hidden;
+}
+.img-cover img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.bi .bg-overlay {
+	background: rgb(0 0 0);
+	opacity: 0.6;
+}
+
+.icon-box.small ul {
+	margin: 20px 0 20px 60px;
+	line-height: 1.6;
+	font-size: 14px;
+}
+
+.list-icon.list-icon-colored li:before,
+.list-icon.icon-list-colored i {
+	color: #9e9e9e;
+}
+
+.mb-50 {
+	margin-bottom: 50px;
+}
+
+.bg-grey {
+	background-color: #efefef;
+}
+
+/* @media (max-width: 1024px) {
+	.post-3-columns .post-item {
+		width: 100%;
+	}
+} */
+
+.post-image a {
+	display: block;
+	position: relative;
+	padding-top: 56.25%;
+	height: 0;
+}
+.post-image a img {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+}
+
+iframe {
+	vertical-align: top;
+}
+
+@media (max-width: 600px) {
+	#header #logo {
+		text-align: left;
+	}
+
+	.kenburns-bg {
+		background-position: 94% 0%;
+	}
+	.inspiro-slider .slide {
+		background-position: 86% 0%;
+	}
+	[data-bg-image]::before {
+		opacity: 0;
+	}
+}
+
+@media (max-width: 475px) {
+	#header .header-inner #logo a,
+	#header .header-inner #logo a span,
+	#header #header-wrap #logo a,
+	#header #header-wrap #logo a span {
+		font-size: 20px;
+	}
+
+	.img-logo {
+		height: 45px;
+	}
 }
