--- a/socialblog/templates/base.html
+++ b/socialblog/templates/base.html
@@ -1,94 +1,138 @@
 <!DOCTYPE html>
-<html lang="en">
+ <html lang="en">
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />    <meta name="author" content="INSPIRO" />    
-    <meta name="description" content="Themeforest Template Polo, html template">
-    <link rel="icon" type="image/png" href="images/favicon.png">   
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Document title -->
-    <title>POLO | The Multi-Purpose HTML5 Template</title>
-    <!-- Stylesheets & Fonts -->
-    <link href="css/plugins.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/mobirise-icons.css" rel="stylesheet">    
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
-</head>
+ <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+     <meta name="author" content="INSPIRO" />
+     <meta name="description" content="Themeforest Template Polo, html template">
+     <link rel="icon" type="image/png" href="images/favicon.png">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <!-- Document title -->
+     <title>Smart Analytics</title>
+     <!-- Stylesheets & Fonts -->
+    <link href="{{url_for('static', filename='css/plugins.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/style.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/custom.css')}}" rel="stylesheet">
+ </head>
 
-<body>
-    <!-- Body Inner -->
-    <div class="body-inner">        
-        <!-- Header -->
-        <header id="header" data-fullwidth="true">
-            <div class="header-inner">
-                <div class="container">
-                    <!--Logo-->
-                    <div id="logo">
-                        <a href="index.html">
-                            <span class="logo-default"><img src="images/brain.jpg"></span>
-                            <span style="color: #833ccc">smart</span><span style="color: #36daf5;">analytics</span>  
-                        </a>
-                    </div>
-                    <!--End: Logo-->                                       
-                    <!--Navigation Resposnive Trigger-->
-                    <div id="mainMenu-trigger">
-                        <a class="lines-button x"><span class="lines"></span></a>
-                    </div>
-                    <!--end: Navigation Resposnive Trigger-->
-                    <!--Navigation-->
-                    <div id="mainMenu">
-                        <div class="container">
-                            <nav>
-                                <ul style="float: left; margin-right: 3rem;">
-                                  <li><a href="index.html">Home</a></li>
-                                  <li><a href="index.html">Servicios</a></li>
-                                  <li><a href="index.html">Acerca</a></li>
-                                  <li><a href="index.html">Contacto</a></li>
-                                </ul>
-                                <div class="menu-phone-number">
-                                    <a class="btn btn-sm btn-primary display-4 pt-1" href="tel:+1-234-567-8901">
-                                        <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
-                                        </span>  +56990207637
-                                    </a>
-                                </div>
-                            </nav>
-                        </div>
-                    </div>
-                    <!--end: Navigation-->
-                </div>
-            </div>
-        </header>
+ <body id="section-1">
+
+     <!-- Body Inner -->
+     <div class="body-inner">
+
+
+         <!-- Header -->
+         <header id="header" data-fullwidth="true" class="header-alternative">
+             <div class="header-inner">
+                 <div class="container">
+                     <!--Logo-->
+                     <div id="logo"> <a href="index.html">
+                             <span class="logo-default"><img src="images/logo.png" alt="" class="img-logo">
+                                 SmartAnalytics</span>
+                             <span class="logo-dark"><img src="images/logo.png" alt="" class="img-logo">
+                                 SmartAnalytics</span></a> </div>
+                     <!--End: Logo-->
+                     <!-- Search -->
+                     <div id="search"><a id="btn-search-close" class="btn-search-close"
+                             aria-label="Close search form"><i class="icon-x"></i></a>
+                         <form class="search-form" action="search-results-page.html" method="get">
+                             <input class="form-control" name="q" type="text" placeholder="Type & Search..." />
+                             <span class="text-muted">Start typing & press "Enter" or "ESC" to close</span>
+                         </form>
+                     </div> <!-- end: search -->
+                     <!--Header Extras-->
+                     <!-- <div class="header-extras">
+                         <ul>
+                             <li> <a id="btn-search" href="#"> <i class="icon-search"></i></a> </li>
+                             <li>
+                                 <div class="p-dropdown"> <a href="#"><i class="icon-globe"></i><span>EN</span></a>
+                                     <ul class="p-dropdown-content">
+                                         <li><a href="#">French</a></li>
+                                         <li><a href="#">Spanish</a></li>
+                                         <li><a href="#">English</a></li>
+                                     </ul>
+                                 </div>
+                             </li>
+                         </ul>
+                     </div> -->
+                     <!--end: Header Extras-->
+                     <!--Navigation Resposnive Trigger-->
+                     <div id="mainMenu-trigger"> <a class="lines-button x"><span class="lines"></span></a> </div>
+                     <!--end: Navigation Resposnive Trigger-->
+                     <!--Navigation-->
+                     <div id="mainMenu">
+                         <div class="container">
+                             <nav>
+                                 <ul>
+                                     <li><a class="scroll-to" href="#section-1">Home</a></li>
+                                     <li><a class="scroll-to" href="#section-2">Acerca</a></li>
+                                     <li><a class="scroll-to" href="#section-3">Servicios</a></li>
+                                     <li><a class="scroll-to" href="#section-4">NUESTRO EQUIPO</a></li>
+                                     <li><a class="scroll-to" href="#section-5">Contacto</a></li>
+
+                                 </ul>
+                             </nav>
+                         </div>
+                     </div>
+                     <!--end: Navigation-->
+                 </div>
+             </div>
+         </header>
+         <!-- end: Header -->
+        <!-- end: Header -->
         <!-- end: Header -->
         <!-- Page Content -->
         {% block div %}
         {% endblock %}
         <!-- end: Page Content -->
         <!-- Footer -->
-        <footer id="footer">
-            <div class="copyright-content">
-                <div class="container">
-                    <div class="copyright-text text-center">&copy; 2020 Geo Intelligence. All Rights Reserved.<a href="//www.geointelligence.com" target="_blank" rel="noopener"> Geo Intelligence</a> </div>
-                </div>
-            </div>
-        </footer>
-        <!-- end: Footer -->
-    </div>
-    <!-- end: Body Inner -->
-    <!-- Scroll top -->
-    <a id="scrollTop"><i class="icon-chevron-up"></i><i class="icon-chevron-up"></i></a>
-    <!--Plugins-->
-    <script src="js/jquery.js"></script>
-    <script src="js/plugins.js"></script>
+        <!-- Footer -->
+                 <!-- Footer -->
+         <footer id="footer">
 
-    <script src="plugins/moment/moment.min.js"></script>
-    <script src="plugins/Chart.min.js"></script>
-    <script src="js/utils.js"></script>
+             <div class="copyright-content">
+                 <div class="container">
+                     <div class="copyright-text text-center">&copy; 2020 - All Rights Reserved.<a href="#"
+                             target="_blank" rel="noopener">
+                             SmartAnalytics</a> </div>
+                 </div>
+             </div>
+         </footer>
+         <!-- end: Footer -->
+
+     </div>
+     <!-- end: Body Inner -->
+
+     <!-- Scroll top -->
+     <a id="scrollTop"><i class="icon-chevron-up"></i><i class="icon-chevron-up"></i></a>
+     <!--Plugins-->
+    <script src="{{url_for('static', filename='js/jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='js/plugins.js')}}"></script>
+
     <!--Template functions-->
-    <script src="js/functions.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="{{url_for('static', filename='js/functions.js')}}"></script>
+
+
+ </body>
+
+ </html>
+
+<!--
+
+    <a id="scrollTop"><i class="icon-chevron-up"></i><i class="icon-chevron-up"></i></a>
+
+    <script src="{{url_for('static', filename='js/jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='js/plugins.js')}}"></script>
+
+    <script src="{{url_for('static', filename='plugins/moment/moment.min.js')}}"></script>
+    <script src="{{url_for('static', filename='plugins/Chart.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/utils.js')}}"></script>
+
+    <script src="{{url_for('static', filename='js/functions.js')}}"></script>
+    <script src="{{url_for('static', filename='js/custom.js')}}"></script>
 </body>
 
 </html>
+-->
 
