--- a/socialblog/templates/backend/posts.html
+++ b/socialblog/templates/backend/posts.html
@@ -1,28 +1,69 @@
 {% extends "backend/base.html" %}
 {% block div %}
-<section class="section-welcome" id="welcome" class="p-b-0">
+<section class="section-content" id="welcome" class="p-b-0">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="mbr-white col-md-12 align-center">
-                <h1 class="mbr-section-title pb-3 mbr-fonts-style display-1 white">Welcome Backend</h1>                                
+        <!--
+        <div class="row">
+            <div class="content col-lg-12">
+                <h4>Posts</h4>
+                <div class="breadcrumb">
+                    <nav aria-label="breadcrumb" class="col-lg-9 col-sm-12">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/backend/dashboard">Backend</a></li>
+                            <li class="breadcrumb-item"><a href="/backend/posts">Posts</a></li>
+                        </ol>
+                    </nav>                    
+                </div>
+                <div class="line"></div>                
             </div>
-            <div class="mbr-white col-md-12 align-center"> 
-              <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">{{current_user.username}}</p>
+        </div>
+        -->
+        <div class="row mb-3">
+            <div class="col-lg-6">
+                <h4>Post list</h4>                
             </div>
-            <div class="mbr-white col-md-12 align-center"> 
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                    <ul class="flashes">
-                        {% for message in messages %}
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            {{ message }}
-                        </div>
+            <div class="col-lg-6 text-right">
+                <a href="/backend/post/create" id="add_post_btn" type="button" class="btn btn-light"><i class="icon-plus"></i> New Post</a>                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <table id="post_table" class="table table-bordered table-hover" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th width="5%">No</th>
+                            <th width="15%">Title</th>
+                            <th width="35%">Content</th>
+                            <th width="15%">Image</th>
+                            <th width="10%">Author</th>
+                            <th width="10%">Date</th>                            
+                            <th width="10%">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                        {% for post in posts %} 
+                        <tr>                       
+                            <td>{{ loop.index }}</td>
+                            <td>{{ post.title }}</td>
+                            {% if post.text|length > 100 %}
+                                <td>{{ post.text[0:100] }} ...</td>
+                            {% else %} 
+                                <td>{{ post.text }} </td>
+                            {% endif %}
+
+                            <td><img src="{{ post.image_url }}" style="width: 150px;"></td>
+                            <td>{{ post.author.username }}</td>
+                            <td>{{ post.date.strftime("%B %d, %Y") }}</td>
+                            <td>
+                                <div><a href="/post/{{ post.id }}" class="btn btn-warning table-btn">VIEW</a></div>
+                                <div><a href="/backend/post/{{ post.id }}/update" class="col-12 btn btn-primary table-btn" >EDIT</a></div>
+                                <div><a href="javascript:;" class="col-12 btn btn-danger table-btn delete-btn" data-id="{{ post.id }}" data-title="{{ post.title }}" >DELETE</a></div>
+                            </td>
+                        </tr>
                         {% endfor %}
-                    {% endif %}
-                {% endwith %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
