--- a/socialblog/templates/base.html
+++ b/socialblog/templates/base.html
@@ -11,6 +11,9 @@
      <!-- Document title -->
      <title>Smart Analytics</title>
      <!-- Stylesheets & Fonts -->
+     <!-- DataTables css -->
+    <link href='{{url_for('static', filename='plugins/datatables/datatables.min.css')}}' rel='stylesheet' />
+
     <link href="{{url_for('static', filename='css/plugins.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='css/style.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='css/custom.css')}}" rel="stylesheet">
@@ -27,11 +30,19 @@
              <div class="header-inner">
                  <div class="container">
                      <!--Logo-->
-                     <div id="logo"> <a href="index.html">
-                             <span class="logo-default"><img src="images/logo.png" alt="" class="img-logo">
-                                 SmartAnalytics</span>
-                             <span class="logo-dark"><img src="images/logo.png" alt="" class="img-logo">
-                                 SmartAnalytics</span></a> </div>
+                     <div id="logo"> 
+                        <a href="index.html">
+                            <span class="logo-default">
+                                <img src="{{url_for('static', filename='images/logo.png')}}" alt="" class="img-logo">
+                                <span style="color: #833ccc;">Smart</span>
+                                <span style="color: #36daf5;">Analytics</span>
+                                <span class="logo-dark">
+                                    <img src="{{url_for('static', filename='images/logo.png')}}" alt="" class="img-logo">
+                                    SmartAnalytics
+                                </span>
+                            </span>
+                        </a>
+                    </div>
                      <!--End: Logo-->
                      <!-- Search -->
                      <div id="search"><a id="btn-search-close" class="btn-search-close"
@@ -65,11 +76,11 @@
                          <div class="container">
                              <nav>
                                  <ul>
-                                     <li><a class="scroll-to" href="#section-1">Home</a></li>
-                                     <li><a class="scroll-to" href="#section-2">Acerca</a></li>
-                                     <li><a class="scroll-to" href="#section-3">Servicios</a></li>
-                                     <li><a class="scroll-to" href="#section-4">NUESTRO EQUIPO</a></li>
-                                     <li><a class="scroll-to" href="#section-5">Contacto</a></li>
+                                     <li><a class="scroll-to" href="/#section-1">Home</a></li>
+                                     <li><a class="scroll-to" href="/#section-2">Acerca</a></li>
+                                     <li><a class="scroll-to" href="/#section-3">Servicios</a></li>
+                                     <li><a class="scroll-to" href="/#section-4">NUESTRO EQUIPO</a></li>
+                                     <li><a class="scroll-to" href="/#section-5">Contacto</a></li>
 
                                  </ul>
                              </nav>
@@ -109,9 +120,16 @@
      <!--Plugins-->
     <script src="{{url_for('static', filename='js/jquery.js')}}"></script>
     <script src="{{url_for('static', filename='js/plugins.js')}}"></script>
+    <!--Datatables plugin files-->
+    <script src='{{url_for('static', filename='plugins/datatables/datatables.min.js')}}'></script>
+
+    <script src="{{url_for('static', filename='plugins/moment/moment.min.js')}}"></script>
+    <script src="{{url_for('static', filename='plugins/Chart.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/utils.js')}}"></script>
 
     <!--Template functions-->
     <script src="{{url_for('static', filename='js/functions.js')}}"></script>
+    <script src="{{url_for('static', filename='js/custom.js')}}"></script>
 
 
  </body>
