--- a/socialblog/templates/index.html
+++ b/socialblog/templates/index.html
@@ -43,6 +43,60 @@
 
  </div>
  <!--end: Inspiro Slider -->
+ <input type="hidden" id="chart1_data" value="{{ chart1_data }}">
+ <section class="section-space scion-article">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-12 col-xl-4 order-xl-2">
+                <div class="heading-text heading-section">
+                    <h4>Datos en timepo real</h4>
+                </div>
+                <div class="row">
+                    <a href="/chart/1" style="width: 100%;">
+                        <div class="col-12 col-md-6 col-lg-12">
+                            <div class="chart-div mb-5">
+                                <canvas id="chart1"></canvas>
+                            </div>
+                        </div>
+                        
+                        <div class="col-12 col-md-6 col-lg-12">
+                            <div class="chart-div mb-5">
+                                <canvas id="chart1_pie"></canvas>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-xl-8">
+                <div class="heading-text heading-section">
+                    <h4>Artículos Recientes</h4>
+                </div>
+                {% for post in posts.items %} 
+                <div class="post-item border side-image-post">
+                    <div class="post-item-wrap">
+                        <div class="post-image">
+                            <a href="/post/{{ post.id }}"> <img alt="" src="{{ post.image_url }}"> </a>
+                        </div>
+                        <div class="post-item-description"> <span class="post-meta-date"><i
+                                    class="fa fa-calendar-o"></i>{{ post.date.strftime("%B %d, %Y") }}</span> 
+                                    <span
+                                class="post-meta-comments"><a href=""><i class="fa fa-comments-o"></i>By {{ post.author.username }}</a></span>
+                            <h2><a href="#">{{ post.title }} </a></h2>
+                            {% if post.text|length > 100 %}
+                                <td>{{ post.text[0:100] }} ...</td>
+                            {% else %} 
+                                <td>{{ post.text }} </td>
+                            {% endif %}
+                            <a href="/post/{{ post.id }}" class="item-link">Read More <i class="icon-chevron-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
 
  <!-- About us -->
  <section id="section-2">
