--- a/socialblog/templates/backend/base.html
+++ b/socialblog/templates/backend/base.html
@@ -29,7 +29,7 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo"> 
-                        <a href="index.html">
+                        <a href="/">
                             <span class="logo-default">
                                 <img src="{{url_for('static', filename='images/logo.png')}}" alt="" class="img-logo">
                                 <span style="color: #833ccc;">Smart</span>
