--- a/socialblog/templates/chart.html
+++ b/socialblog/templates/chart.html
@@ -19,10 +19,11 @@
         <div class="row">
             <!-- content -->
             <input type="hidden" id="chart1_data" value="{{ chart_data }}">
+            <input type="hidden" id="chart1_title" value="{{ chart.title }}">
 
             <div class="col-12 col-xl-12">
                 <div class="heading-text heading-section">
-                    <h4>{{ title }}</h4>
+                    <h4>{{ chart.title }}</h4>
                 </div>                
             </div>
             <div class="col-12 col-md-6 col-lg-6">
@@ -43,7 +44,7 @@
                     <div class="post-item">
                         <div class="post-item-wrap">                            
                             <div class="post-item-description">                                
-                                {{ text }}
+                                {{ chart.text }}
                             </div>
                         </div>
                     </div>
